# Copyright (C) 2000 MySQL AB & MySQL Finland AB & TCX DataKonsult AB
# 
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Library General Public
# License as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later version.
# 
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Library General Public License for more details.
# 
# You should have received a copy of the GNU Library General Public
# License along with this library; if not, write to the Free
# Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
# MA 02111-1307, USA

# This file is public domain and comes with NO WARRANTY of any kind

target = libmysqlclient.la
target_defs = -DUNDEF_THREADS_HACK
LIBS   = @CLIENT_LIBS@

include $(srcdir)/Makefile.shared

libmysqlclient_la_SOURCES = $(target_sources)
libmysqlclient_la_LIBADD = $(target_libadd)
libmysqlclient_la_LDFLAGS = $(target_ldflags)

# This is called from the toplevel makefile
link_sources:
	  set -x; \
	  ss=`echo $(mystringsobjects) | sed "s;\.lo;.c;g"`; \
	  ds=`echo $(dbugobjects) | sed "s;\.lo;.c;g"`; \
	  ms=`echo $(mysysobjects) | sed "s;\.lo;.c;g"`; \
	  for f in $$ss; do \
	    rm -f $(srcdir)/$$f; \
	    @LN_CP_F@ $(srcdir)/../strings/$$f $(srcdir)/$$f; \
	  done; \
	  for f in $(mystringsextra); do \
	    rm -f $(srcdir)/$$f; \
	    @LN_CP_F@ $(srcdir)/../strings/$$f $(srcdir)/$$f; \
	  done; \
	  for f in $$ds; do \
	    rm -f $(srcdir)/$$f; \
	    @LN_CP_F@ $(srcdir)/../dbug/$$f $(srcdir)/$$f; \
	  done; \
	  for f in $$ms $(mysysheaders); do \
	    rm -f $(srcdir)/$$f; \
	    @LN_CP_F@ $(srcdir)/../mysys/$$f $(srcdir)/$$f; \
	  done;

# This part requires GNUmake
#
# This makes a distribution file with only the files needed to compile
# a minimal MySQL client library
#
# For a really minimal distribution (without debugging code) we could
# keep only the stubs for safemalloc.c and debug.c
#
# A list of needed headers collected from the deps information 000213
nh =		global.h config-win32.h dbug.h errmsg.h global.h \
		m_ctype.h m_string.h \
		my_alarm.h my_config.h my_dir.h my_list.h my_net.h my_sys.h \
		mysql.h mysql_com.h mysql_version.h mysqld_error.h mysys_err.h \
		my_pthread.h thr_alarm.h violite.h
# Get a list of the needed objects  
lobjs = $(mysysobjects1) $(dbugobjects) $(mystringsobjects)

do-lib-dist:
	dir=libmysql-$(MYSQL_NO_DASH_VERSION); \
	srcs1=`echo $(lobjs) | sed "s;\.lo;.c;g"`; \
	srcs2=$(target_sources); \
	srcs="$$srcs1 $$srcs2"; \
	objs1=`echo $(lobjs) | sed "s;\.lo;.o;g"`; \
	objs2=`echo $(target_sources) | sed "s;\.c;.o;g"`; \
	objs="$$objs1 $$objs2"; \
	rm -rf $$dir; \
	mkdir $$dir; \
	cp $$srcs $(mysysheaders) $$dir; \
	for i in $(nh); do cp ../include/$$i $$dir; done; \
	echo "# A very minimal Makefile to compile" > $$dir/Makefile; \
	echo "# the minimized libmysql library" >> $$dir/Makefile; \
	echo "# This file is autogenerated from Makefile.am" >> $$dir/Makefile; \
	echo 'CFLAGS=	-I. -DUNDEF_THREADS_HACK' >>$$dir/Makefile; \
	echo "obj=$$objs"  >>$$dir/Makefile; \
	echo 'all: libmysql.a'  >>$$dir/Makefile; \
	echo 'libmysql.a: $$(obj)'  >>$$dir/Makefile; \
	echo '	$$(AR) r $$@ $$?'  >>$$dir/Makefile; \
	gtar cvzf $$dir.tar.gz $$dir; \
	cd $$dir; gmake
